--- a/JobHive/index.html
+++ b/JobHive/index.html
@@ -219,7 +219,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>© 2024, JobHive. Inc - Powered by Script Starling</p>
+            <p>© 2024, JobHive. Inc - Powered by ScriptzStarling</p>
             <a href="#">Term of Cookies</a>
         </div>
     </footer>
