--- a/JobHive/index.html
+++ b/JobHive/index.html
@@ -172,7 +172,7 @@
         <div class="footer-container">
             <div class="footer-left">
                 <h2>Your Gateway to a brighter future!</h2>
-                <p>25-1 Jalan 2/27a, Seksyen 1<br>Wangsa Maju, 53300 Kuala Lumpur, Malaysia.</p>
+                <p>Bhubneswar, India</p>
                 <div class="social-media">
                     <a href="#"><img src="Pics\Facebook_1.png" alt="Facebook"></a>
                     <a href="#"><img src="Pics\Twitter.png" alt="Twitter"></a>
